--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,3 +1,11 @@
+header {
+    background-image: url("/files/readme_images/helix.png");
+    background-size: cover;
+    height: 100%;
+    text-align: center;
+    color: white;
+}
+
 ---
 ---
 
