--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,6 +1,5 @@
 .page-header {
-  text-align: center;
-  background-image: "files/readme_images/helix.png";
+  text-align: left;
 
   @include large {
     padding: 5rem 6rem;
