--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,5 +1,12 @@
+---
+---
+
+@import 'jekyll-theme-cayman';
+
+
 .page-header {
-  text-align: left;
+   text-align: center;
+   background-image: "files/readme_images/helix.png";
 
   @include large {
     padding: 5rem 6rem;
@@ -13,5 +20,3 @@
     padding: 2rem 1rem;
   }
 }
-
-@import 'jekyll-theme-cayman';
