--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,5 +3,6 @@
 
 @import 'jekyll-theme-cayman';
 .page-header {
-  text-align: left;
+  text-align: right;
+  background-image: "https://scx2.b-cdn.net/gfx/news/hires/2018/couldstudyin.jpg";
 }
