--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,5 +4,5 @@
 @import 'jekyll-theme-cayman';
 .page-header {
   text-align: right;
-  background-image: "https://scx2.b-cdn.net/gfx/news/hires/2018/couldstudyin.jpg";
+  background-image: url("https://scx2.b-cdn.net/gfx/news/hires/2018/couldstudyin.jpg");
 }
