--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,7 +5,7 @@
 .page-header {
   color: blue;
   text-align: right;
-  background-image: url("https://scx2.b-cdn.net/gfx/news/hires/2018/couldstudyin.jpg");
+  background-image: url("https://github.com/JacopoPan/gym-pybullet-drones/blob/gh-pages/assets/css/banner.png?raw=true");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
