--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,7 +3,7 @@
 
 @import 'jekyll-theme-cayman';
 .page-header {
-  color: black;
+  color: midnightblue;
   text-align: right;
   background-image: url("https://github.com/JacopoPan/gym-pybullet-drones/blob/gh-pages/assets/css/banner.png?raw=true");
   background-repeat: no-repeat;
