--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -10,15 +10,11 @@
   background-position: center;
 }
 .project-name {
-  color: midnightblue;
-  background-color: rgba(255, 255, 255, 0.2);
-  border-color: rgba(255, 255, 255, 0.4);
+  color: cornflowerblue;
 }
 
 .project-tagline {
-  color: midnightblue;
-  background-color: rgba(255, 255, 255, 0.2);
-  border-color: rgba(255, 255, 255, 0.4);
+  color: cornflowerblue;
 }
 .btn {
   color: rgba(25, 25, 112, 0.7);
