--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -10,11 +10,11 @@
   background-position: center;
 }
 .project-name {
-  color: cornflowerblue;
+  color: darkblue;
 }
 
 .project-tagline {
-  color: cornflowerblue;
+  color: darkblue;
 }
 .btn {
   color: rgba(25, 25, 112, 0.7);
