--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -26,3 +26,13 @@
     border-color: rgba(255, 255, 255, 0.6);
   }
 }
+.main-content {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    color: darkblue;
+  }
+}
