--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -17,11 +17,11 @@
   color: darkblue;
 }
 .btn {
-  color: rgba(25, 25, 112, 0.7);
+  color: rgba(0, 0, 139, 0.7);
   background-color: rgba(255, 255, 255, 0.2);
   border-color: rgba(255, 255, 255, 0.4);
   &:hover {
-    color: rgba(25, 25, 112, 0.8);
+    color: rgba(0, 0, 139, 0.8);
     background-color: rgba(255, 255, 255, 0.4);
     border-color: rgba(255, 255, 255, 0.6);
   }
@@ -33,6 +33,6 @@
   h4,
   h5,
   h6 {
-    color: darkblue;
+    color: blue;
   }
 }
