--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -11,10 +11,12 @@
 }
 .project-name {
   color: darkblue;
+  margin-top: 0;
+  margin-bottom: 0.0rem;
 }
-
 .project-tagline {
   color: darkblue;
+  font-weight: normal;
 }
 .btn {
   color: rgba(0, 0, 139, 0.7);
