--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -12,11 +12,11 @@
 .project-name {
   color: darkblue;
   margin-top: 0;
-  margin-bottom: 0.0rem;
+  margin-bottom: 0;
 }
 .project-tagline {
   color: darkblue;
-  font-weight: normal;
+  font-weight: bold;
 }
 .btn {
   color: rgba(0, 0, 139, 0.7);
