--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,7 +4,7 @@
 @import 'jekyll-theme-cayman';
 .page-header {
   text-align: right;
-  background-image: url("https://github.com/JacopoPan/gym-pybullet-drones/blob/gh-pages/assets/css/banner.png?raw=true");
+  background-image: url("https://github.com/JacopoPan/gym-pybullet-drones/blob/gh-pages/assets/css/banner.png");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
